Fix security matching on import, don't match empty fields.

Use the same policy of matching two fields only if they are not
empty consistently for matching securities. Thanks to George
(george@wildturkeyranch.net) for figuring this out.

BUG: 337208