kmymoney/converter/mymoneystatementreader.cpp
@@ -61,6 +61,11 @@
 #include "existingtransactionmatchfinder.h"
 #include "scheduledtransactionmatchfinder.h"
 
+bool matchNotEmpty(const QString &l, const QString &r)
+{
+  return !l.isEmpty() && QString::compare(l, r, Qt::CaseInsensitive) == 0;
+}
+
 class MyMoneyStatementReader::Private
 {
 public:
@@ -553,11 +558,10 @@ void MyMoneyStatementReader::processSecurityEntry(const MyMoneyStatement::Securi
   QList<MyMoneySecurity> list = file->securityList();
   QList<MyMoneySecurity>::ConstIterator it = list.constBegin();
   while (it != list.constEnd() && security.id().isEmpty()) {
-    if (sec_in.m_strSymbol.isEmpty()) {
-      if ((*it).name() == sec_in.m_strName)
-        security = *it;
-    } else if ((*it).tradingSymbol().toLower() == sec_in.m_strSymbol.toLower())
+    if (matchNotEmpty(sec_in.m_strSymbol, (*it).tradingSymbol()) ||
+        matchNotEmpty(sec_in.m_strName, (*it).name())) {
       security = *it;
+    }
     ++it;
   }
 
@@ -654,8 +658,8 @@ void MyMoneyStatementReader::processTransactionEntry(const MyMoneyStatement::Tra
       while (!found && it_account != accounts.constEnd()) {
         QString currencyid = file->account(*it_account).currencyId();
         MyMoneySecurity security = file->security(currencyid);
-        if ((statementTransactionUnderImport.m_strSymbol.toLower() == security.tradingSymbol().toLower())
-            || (statementTransactionUnderImport.m_strSecurity.toLower() == security.name().toLower())) {
+        if (matchNotEmpty(statementTransactionUnderImport.m_strSymbol, security.tradingSymbol()) ||
+            matchNotEmpty(statementTransactionUnderImport.m_strSecurity, security.name())) {
           thisaccount = file->account(*it_account);
           found = true;
 
@@ -699,8 +703,8 @@ void MyMoneyStatementReader::processTransactionEntry(const MyMoneyStatement::Tra
           QList<MyMoneySecurity> list = MyMoneyFile::instance()->securityList();
           QList<MyMoneySecurity>::ConstIterator it = list.constBegin();
           while (it != list.constEnd() && security.id().isEmpty()) {
-            if (statementTransactionUnderImport.m_strSymbol.toLower() == (*it).tradingSymbol().toLower()
-                || statementTransactionUnderImport.m_strSecurity.toLower() == (*it).name().toLower()) {
+            if (matchNotEmpty(statementTransactionUnderImport.m_strSymbol, (*it).tradingSymbol()) ||
+                matchNotEmpty(statementTransactionUnderImport.m_strSecurity, (*it).name())) {
               security = *it;
             }
             ++it;
